2006-03-29  Sven Neumann  <sven@gimp.org>

	* desktop/Makefile.am
	* desktop/gimp.png: removed.

	* desktop/16x16/gimp.png
	* desktop/22x22/gimp.png
	* desktop/24x24/gimp.png
	* desktop/32x32/gimp.png
	* desktop/48x48/gimp.png
	* desktop/64x64/gimp.png
	* desktop/scalable/gimp.svg: new application icons in different
	sizes, contributed by Jakub Steiner.

	* themes/Default/images/Makefile.am
	* themes/Default/images/stock-wilber-32.png
	* themes/Default/images/stock-wilber-48.png: removed.

	* libgimpwidgets/Makefile.am
	* libgimpwidgets/wilber-16.png
	* libgimpwidgets/wilber-32.png
	* libgimpwidgets/wilber-48.png
	* libgimpwidgets/wilber-64.png: new window icons, identical to the
	new application icons.

	* libgimpwidgets/gimpwidgets-private.c: use the new window icons.

2006-03-29  Sven Neumann  <sven@gimp.org>

	* app/plug-in/plug-in-message.c
	* app/plug-in/plug-in-params.c
	* app/plug-in/plug-in.c: string review.

2006-03-29  Tor Lillqvist  <tml@novell.com>

	* plug-ins/common/winprint.c (query): Make it compile again, add
	missing parameter to gimp_install_procedure().

2006-03-28  Sven Neumann  <sven@gimp.org>

        * configure.in (ALL_LINGUAS): removed "ka" until all po files have
	been added.

2006-03-28 Vladimer Sichinava  <vlsichinava@gmail.com>

        * configure.in: Added "ka" (Georgian) to ALL_LINGUAS

2006-03-28  Michael Natterer  <mitch@gimp.org>

	* app/pdb/procedural_db.[ch] (struct ProcArg): replace "name"
	and "description" by a GParamSpec.

	(procedural_db_init_proc)
	(procedural_db_add_argument)
	(procedural_db_add_return_value)
	(procedural_db_add_compat_arg)
	(procedural_db_add_compat_val): new functions which dynamically
	allocate and register arguments and return value arrays based on
	GParamSpecs.

	* app/pdb/procedural-db-query.c
	* app/plug-in/plug-in-message.c
	* app/plug-in/plug-in-proc-def.c
	* app/plug-in/plug-in-rc.c
	* app/xcf/xcf.c
	* tools/pdbgen/pdb/procedural_db.pdb: changed accordingly.
